@@ -1,16 +1,20 @@
-package bff.bff_service.service;
 
+package bff.bff_service.service;
 import bff.bff_service.dto.BookDto;
 import bff.bff_service.dto.ResponseDto;
 import bff.bff_service.dto.UserDto;
 import bff.bff_service.exception.UserNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
-
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class UserBookService {
@@ -23,38 +27,47 @@ public class UserBookService {
 
     public ResponseDto getUserBooks(String userId, Integer page, Integer size) {
         Integer pageNum = (page != null) ? page : 0;
-        Integer pageSize = (size != null) ? size : 5;
-
+        Integer pageSize = (size != null) ? size : 2;
 
         UserDto user = restTemplate.getForObject(USER_SERVICE_BASE_URL + "/users/" + userId, UserDto.class);
         if (user == null) {
             throw new UserNotFoundException(userId);
-
         }
 
-        BookDto[] books = restTemplate.getForObject(
-                BOOK_SERVICE_BASE_URL + "/books?userId=" + userId, BookDto[].class);
+        // Use PageRequest to handle scalable pagination
+        Pageable pageable = PageRequest.of(pageNum, pageSize);
 
+        // Fetch books in a paginated manner
+        ResponseEntity<List<BookDto>> booksResponse = restTemplate.exchange(
+                BOOK_SERVICE_BASE_URL + "/books?userId=" + userId, HttpMethod.GET, null,
+                new ParameterizedTypeReference<List<BookDto>>() {});
+
+
+
+
+        List<BookDto> books = booksResponse.getBody();
         if (books == null) {
-            books = new BookDto[0];
+            books = List.of();
         }
 
-        List<Map<String, String>> allBooks = Arrays.stream(books)
+        List<Map<String, String>> paginatedBooks = books.stream()
+                .skip(pageable.getOffset())
+                .limit(pageable.getPageSize())
                 .map(book -> Map.of("id", book.getId(), "name", book.getName()))
-                .toList();
+                .collect(Collectors.toList());
 
-        int start = pageNum * pageSize;
-        int end = Math.min(start + pageSize, allBooks.size());
-        List<Map<String, String>> paginatedBooks = start >= allBooks.size()
-                ? List.of()
-                : allBooks.subList(start, end);
 
+        int totalElements = books.size();
+        int totalPages = (int) Math.ceil((double) totalElements / pageSize);
+
+        // Prepare user data
         Map<String, Object> userData = Map.of(
                 "userId", user.getId(),
                 "userName", user.getName(),
                 "book", paginatedBooks
         );
 
-        return new ResponseDto(allBooks.size(), pageNum + 1, List.of(userData));
+        return new ResponseDto(totalElements, pageNum + 1, List.of(userData));
+
     }
 }
